CMake: discover more unit tests

Discover unit-tests using bracket arguments and/or listed in
files other than CTestTestFile.cmake:

When using gtest_discover_tests(), add_test() directives are present
in various .cmake files. To date, Kdevelop searches for unit-tests
does not follow include() directives present in the main
CTestTestfile.cmake, leading to no unit-tests being shown.
Additionally, the bracket arguments of CMake is not enabled for
parsing tests arguments.

This patch enables them, and follows include() directives.

Reviewers: apol, kfunk, mwolff
Reviewed By: mwolff
Subscribers: mwolff, kdevelop-devel
Tags: #kdevelop
BUG: 405225
Differential Revision: https://phabricator.kde.org/D19673